# Intermud3

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  PHASE_2_TEST_REPORT.md  PROTOCOL_FIXES.md  README.md  coverage.json  docker-compose.prod.yml  docker-compose.yml  i3-gateway.service  ngrok.yml.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: ci.yml
clients/circlemud/: CIRCLEMUD_CLIENT_AUDIT.md  LUMINARI_CONFIG.md  README.md  i3.conf  i3_client.c  i3_client.h  i3_commands.c  i3_makefile.patch  i3_protocol.c  install.sh
clients/examples/: README.md  channel_bot.py  relay_bridge.py  requirements.txt  simple_mud.py  web_client.py
clients/javascript/: README.md  example.js  i3-client.d.ts  i3-client.js  package.json
clients/python/: i3_client.py
config/: config.yaml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  HIGH_LEVEL_PLAN.md  INTEGRATION_GUIDE.md  LOCAL_DEV_DEPLOY.md  PERFORMANCE_TUNING.md  TESTING.md  TODO.md  TROUBLESHOOTING.md  gateway_list.md
docs/ai_tools/claude_code/: claude_code_github_actions.md  claude_code_hooks.md
docs/intermud3_docs/: VISNAME_CLARIFICATION.md  architecture.md  overview.md  packet-format.md  protocols.md  reference.md  router-design.md  support-packets.md
docs/intermud3_docs/services/: README.md  auth.md  channel.md  emoteto.md  file.md  finger.md  locate.md  mail.md  news.md  tell.md  ucache.md  who.md
docs/previous_changelogs/: 2023-2024_changelog.md  changelog_phase_1.md  changelog_phase_2.md  changelog_phase_3.md  changelog_phase_3_part2.md
docs/projects/: HIGH_LEVEL_PLAN.md  I3_TEST_REPORT.md  PHASE 1.md  PHASE 2.md  PHASE 3.md  PHASE_1.md  PHASE_3.md  TESTING.md
docs/python/: python_project.md
monitoring/: alertmanager.yml  prometheus.yml
monitoring/alerts/: gateway_alerts.yml
src/: __init__.py  __main__.py  gateway.py
src/api/: api_handlers.py  auth.py  event_bridge.py  events.py  handlers.py  health.py  protocol.py  queue.py  server.py  session.py  state.py  subscriptions.py  tcp_server.py
src/api/handlers/: __init__.py  admin.py  base.py  channels.py  communication.py  information.py
src/config/: __init__.py  loader.py  models.py
src/models/: __init__.py  connection.py  packet.py
src/network/: __init__.py  connection.py  connection_pool.py  lpc.py  mudmode.py
src/services/: __init__.py  base.py  channel.py  finger.py  locate.py  router.py  tell.py  who.py
src/state/: __init__.py  manager.py
src/utils/: __init__.py  circuit_breaker.py  logging.py  retry.py  shutdown.py
tests/: __init__.py  conftest.py  test_i3_integration.sh
tests/api/: test_auth.py  test_events.py
tests/fixtures/: __init__.py  mock_router.py
tests/integration/: __init__.py  test_gateway.py  test_network_integration.py
tests/integration/api/: test_api_e2e.py
tests/performance/: test_benchmarks.py  test_stress.py
tests/performance/api/: test_api_throughput.py
tests/services/: test_base.py  test_channel.py  test_finger.py  test_locate.py  test_router.py  test_tell.py  test_who.py
tests/unit/: __init__.py  test_lpc.py  test_packet.py  test_packet_fixed.py
tests/unit/api/: test_event_bridge.py  test_handlers.py  test_protocol.py  test_queue.py  test_server.py  test_session.py  test_subscriptions.py
tests/unit/network/: test_connection.py  test_connection_pool.py  test_mudmode.py
tests/unit/state/: __init__.py  test_manager.py
tests/unit/utils/: test_circuit_breaker.py  test_retry.py  test_shutdown.py
